--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,9 @@
 /* Global styles */
+html {
+  box-shadow: inset 0 0 0 30px #000;
+  padding: 0 30px;
+}
+
 body {
   font-family: helvetica, arial, sans;
 }
@@ -21,6 +26,13 @@ h2 ~ p {
 }
 
 /* Header styles */
+.header {
+  background-color: #000;
+  color: #fff;
+  position: fixed;
+  width: 100%;
+  z-index: 20;
+}
 .header-nav {
   float: right;
   padding: 5.5vh 60px 0 0;
@@ -30,29 +42,72 @@ h2 ~ p {
   margin-left: 1em;
 }
 .header-nav > li ~ li {
-  border-left: 1px solid rgba(0,0,0,0.3);
+  border-left: 1px solid rgba(255,255,255,0.3);
   padding-left: 1em;
 }
 .header-nav a {
-  color: #000;
-  font-size: 0.8rem;
-  font-weight: bold;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-.header-nav a:hover,
-.header-nav a:active {
-  color: #ed6e2f;
+  color: #fff;
 }
 .header-nav > li:first-child a {
   color: #ed6e2f;
 }
 .header-nav > li:first-child a:hover {
-  color: #000;
+  color: #fff;
+}
+.header-logo {
+  background-color: #000;
+  box-sizing: border-box;
+  display: block;
+  height: 10vh;
+  left: -30px;
+  padding-top: 10px;
+  position: relative;
+  text-align: center;
+  width: 10vh;
+}
+.header-logo img {
+  width: 4.3vh;
 }
 .header-logo:hover,
 .header-logo:active {
-  opacity: 0.5;
+  background-color: #ed6e2f;
+}
+
+/* Footer styles */
+.footer {
+  background-color: #000;
+  padding: 10vh 0 15vh;
+  text-align: center;
+}
+.footer-logo img {
+  width: 50px;
+}
+.footer h3 {
+  color: #fff;
+  padding-top: 1.5em;
+  text-transform: uppercase;
+}
+.footer h3 span {
+  color: #aaa;
+}
+.footer-nav li {
+  display: inline-block;
+  margin: 2em 1em 0;
+}
+.footer-nav a {
+  color: #ccc;
+}
+
+/* Nav links styles */
+.nav-links a {
+  font-size: 0.8rem;
+  font-weight: bold;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.nav-links a:hover,
+.nav-links a:active {
+  color: #ed6e2f;
 }
 
 /* Hero styles */
