--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 /* Global styles */
 html {
-  box-shadow: inset 0 0 0 30px #000;
+  /* NB: box-shadow is an odd number because Firefox :-/ */
+  box-shadow: inset 0 0 0 31px #000; 
   padding: 0 30px;
 }
 
@@ -113,7 +114,35 @@ h2 ~ p {
 /* Hero styles */
 .full-hero {
   background-color: #c7dbfc;
-  height: 50vh;
+  background-size: cover;
+  box-sizing: border-box;
+  height: 100vh;
+  padding-top: 10vh;
+}
+.hero-home {
+  background-image: url(/images/shark.jpg);
+  background-position: center top;
+}
+.hero-content {
+  color: #fff;
+  position: relative;
+  text-align: center;
+  text-transform: uppercase;
+  top: 50%;
+  transform: translate(0, -50%);
+}
+.hero-content h1 {
+  color: rgba(255, 255, 255, 0.8);
+  font-size: 7vw;
+  margin-bottom: 0.25em;
+}
+.hero-content .social-link {
+  background-color: rgba(255, 255, 255, 0.8);
+  color: #557c83;
+}
+.hero-content .social-link:hover {
+  background-color: #000;
+  color: #fff;
 }
 
 /* Social styles */
