--- a/css/main.css
+++ b/css/main.css
@@ -13,11 +13,15 @@ h1 {
   font-size: 7vw;
   margin-top: 0;
 }
-
-a {
-  color: #f00;
+h2 {
+  font-size: 2em;
 }
-
+a {
+  color: #6397b5;
+}
+p {
+  line-height: 1.5;
+}
 h2 ~ p {
   font-size: 0.8em;
   font-style: italic;
@@ -119,6 +123,18 @@ h2 ~ p {
   height: 100vh;
   padding-top: 10vh;
 }
+.full-hero:after {
+  bottom: 2vh;
+  border: 10px solid;
+  border-color: #fff transparent transparent;
+  content: "";
+  display: block;
+  height: 0;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, 0);
+  width: 0;
+}
 .hero-home {
   background-image: url(/images/shark.jpg);
   background-position: center top;
@@ -175,6 +191,30 @@ h2 ~ p {
   margin: 0 0.5em;
 }
 
+/* Homepage styles */
+.home-callout {
+  background-color: #000;
+  color: #fff;
+  padding: 7vh 0;
+}
+.callout-title {
+  font-size: 5.75vw;
+  text-align: right;
+  text-transform: uppercase;
+}
+.callout-copy {
+  font-size: 0.8rem;
+}
+.home-section {
+  margin: 6rem auto;
+  max-width: 980px;
+  width: 90vh;
+}
+.home-section h2 {
+  margin-bottom: 1.5rem;
+  text-align: center;
+}
+
 /* Bio styles */
 .bio-wrapper {
   font-size: 24px;
@@ -184,21 +224,20 @@ h2 ~ p {
 }
 
 .bio-box {
-  border: 1px solid #000;
-  border-color: black black red;
   box-sizing: border-box;
   float: left;
   font-size: 1rem;
-  margin: 40px 1% 0;
-  padding: 0 2% 2%;
-  width: 23%;
+  margin: 6rem 0 0;
+  padding: 0 3%;
+  width: 33%;
 }
 
 .bio-box h3 {
-  font-size: 1.5em;
   color: #fff;
+  font-size: 1.5em;
   margin: -40px 0 1em;
   text-align: center;
+  text-transform: uppercase;
 }
 
 .bio-box img {
@@ -207,12 +246,11 @@ h2 ~ p {
 
 .bio-box .social-link {
   display: block;
-  margin: 2em 0 1em;
+  margin: 2em auto 1em;
 }
 
 .bio-copy {
-  font-size: 1em;
-  line-height: 1.5;
+  font-size: 1.5em;
 }
 
 .bio-copy a {
