--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,7 @@ a {
 }
 p {
   line-height: 1.5;
+  margin: 0.75em 0;
 }
 h2 ~ p {
   font-size: 0.8em;
@@ -200,17 +201,24 @@ h2 ~ p {
 
 /* Homepage styles */
 .home-callout {
+  align-items: center;
   background-color: #000;
   color: #fff;
+  display: flex;
   padding: 7vh 0;
 }
 .callout-title {
+  flex-grow: 1;
+  flex-basis: 0;
   font-size: 5.75vw;
   text-align: right;
   text-transform: uppercase;
 }
 .callout-copy {
+  flex-basis: 45em;
+  flex-shrink: 0;
   font-size: 0.8rem;
+  padding: 0 3vw;
 }
 .home-section {
   margin: 6rem auto;
