Hmmm, responsive has changed since 2017

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <head>
   <title>Working Through "Learn Enough CSS to be Dangerous"</title>
-  <meta charset="utf-8">
+  <meta charset="utf-8" content="width=device-width, initial-scale=1" name="viewport">
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/main.css">
 </head>
